<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:iconSpaceReserved="false"
            app:entryValues="@array/theme_values"
            app:entries="@array/theme_entries"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="md3"
            app:title="@string/md3"
            app:iconSpaceReserved="false"
            app:summary="@string/md3_subtext"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="no_flash_when_screen"
            app:title="@string/no_flash_when_screen"
            app:iconSpaceReserved="false"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="no_flash_on_device_screen_off"
            app:title="@string/no_flash_on_device_screen_off"
            app:summary="@string/no_flash_on_device_screen_off_subtext"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="volume_keys_brightness"
            app:title="@string/volume_keys_brightness"
            app:summary="@string/volume_keys_brightness_subtext"
            app:iconSpaceReserved="false"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="glyph_interface"
            app:title="@string/glyph_interface"
            app:summary="@string/glyph_interface_subtext"
            app:iconSpaceReserved="false"
            app:defaultValue="true"/>

        <Preference
            app:key="set_as_digital_assistant"
            app:title="@string/assitant_title"
            app:summary="@string/assitant_summary"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="replay_showcase"
            app:title="@string/showcase_replay"
            app:summary="@string/showcase_replay_subtext"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sos"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="words_per_min"
            app:title="@string/words_per_min"
            app:dialogMessage="@string/words_per_min_explanation"
            app:iconSpaceReserved="false"
            app:defaultValue="5"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="use_farnsworth"
            app:title="@string/use_farnsworth"
            app:iconSpaceReserved="false"
            app:defaultValue="false"/>

        <EditTextPreference
            app:key="farnsworth_unit"
            app:title="@string/farnsworth_unit_length"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="learn_more_morse_timing"
            app:title="@string/learn_more_morse_timing"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>